# video-downloader

./: .gitignore  Makefile  README.md  build_exe.py  pyproject.toml
.github/workflows/: build-exe.yml
vddownloader/: __init__.py  app.py
